mise en page home

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,10 +1,5 @@
-.collapse
+body
 {
-    display: 'flex';
-    padding: 15px;
-}
-
-.test
-{
-    color:$color-1;
+    padding: 30px 4%;
+    font-family: $police-1;
 }
