mise a jour des pages

--- a/src/sass/utils/_Variables.scss
+++ b/src/sass/utils/_Variables.scss
@@ -3,5 +3,6 @@ $color-2: #FF79DA;
 $color-3: #FFFFFF;
 $color-4: #E5E5E5;
 $position1: absolute;
-$border-radius1: 25px;;
+$border-radius1: 25px;
+$border-radius2: 10px;
 $police-1: 'Montserrat';
