--- a/src/sass/pages/_Home.scss
+++ b/src/sass/pages/_Home.scss
@@ -2,7 +2,6 @@
 {
     margin: 0px;
     padding: 0px;
-    width: 100%;
     height: 225px;
     background: #000000;
     border-radius: $border-radius1;
@@ -31,29 +30,33 @@
 
 .Home-2
 {
-
+    margin : 50px 0px;
     background-color: $color-4;
-    width: 100%;
     border-radius: $border-radius1;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 
 .Home-card
 {
-    flex: 2;
-    border-radius: $border-radius1;
+    margin: 50px 0px 0px 50px;
+    position: relative;
 }
 
 .CoverH
 {
-    border-radius: $border-radius1;
-    height: 350px; 
-    width: 350px;
+    border-radius: $border-radius2;
+    height: 370px; 
+    width: 390px;
 }
 
 .titleH
 {
     position: absolute;
+    top: 340px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    color: $color-3;
 }
