--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,7 @@
 
 /* important */
 @import "./base/base.scss";
-@import "./components/button.scss";
+@import "./components/textbox.scss";
 @import "./components/caroussel.scss";
 @import "./layout/footer.scss";
 @import "./layout/header.scss";
