--- a/src/sass/utils/_Variables.scss
+++ b/src/sass/utils/_Variables.scss
@@ -1,8 +1,9 @@
 $color-1: #FF6060;
-$color-2: #FF79DA;
+$color-2: #000000;
 $color-3: #FFFFFF;
 $color-4: #E5E5E5;
 $position1: absolute;
 $border-radius1: 25px;
 $border-radius2: 10px;
+$border-radius3: 5px;
 $police-1: 'Montserrat';
