Maj de 3 pages, finition de Apropos

--- a/src/sass/components/_textbox.scss
+++ b/src/sass/components/_textbox.scss
@@ -14,28 +14,32 @@
     border-radius: $border-radius3;
     margin: 0px;
     padding: 5px 10px;
+    font-size: 24px;
 }
 
 .chev
 {
     position: absolute;
     right : 20px;
-    top : 0px;
+    top : 5px;
 }
 
 .Checkbox
 {
     position: absolute;
-    right: 20px;
+    top: 5px;
+    right: 25px;
     opacity: 0;
 }
 
 .Textbox-text
 {
-    background-color: $color-4;
+    background-color: $color-5;
     border-radius: 0px 0px 5px 5px;
     color: $color-1;
     margin: 0px 0px 0px 0px;
+    padding: 5px 10px;
+    font-size: 24px;
 }
 
 
