--- a/src/sass/utils/_Variables.scss
+++ b/src/sass/utils/_Variables.scss
@@ -2,6 +2,7 @@ $color-1: #FF6060;
 $color-2: #000000;
 $color-3: #FFFFFF;
 $color-4: #E5E5E5;
+$color-5: #F6F6F6;
 $position1: absolute;
 $border-radius1: 25px;
 $border-radius2: 10px;
