--- a/src/sass/utils/_Variables.scss
+++ b/src/sass/utils/_Variables.scss
@@ -7,4 +7,4 @@ $position1: absolute;
 $border-radius1: 25px;
 $border-radius2: 10px;
 $border-radius3: 5px;
-$police-1: 'Montserrat';
+$police-1: 'Montserrat', sans-serif;
