Maj Desktop, correction de détails

--- a/src/sass/components/_Collapse.scss
+++ b/src/sass/components/_Collapse.scss
@@ -1,3 +1,5 @@
+/*Collapse*/
+
 .Textbox
 {
     display:flex;
@@ -19,15 +21,17 @@
 .chev
 {
     position: absolute;
-    right : 20px;
-    top : 5px;
+    right : 18px;
+    top : 11px;
 }
 
 .Checkbox
 {
     position: absolute;
-    top: 5px;
-    right: 25px;
+    top: 6px;
+    right: 20px;
+    height: 20px;
+    width: 20px;
     opacity: 0;
 }
 
@@ -37,7 +41,7 @@
     border-radius: 0px 0px 5px 5px;
     color: $color-1;
     margin: 0px 0px 0px 0px;
-    padding: 5px 10px;
+    padding: 20px 40px;
 }
 
 
