--- a/src/sass/pages/_A-Propos.scss
+++ b/src/sass/pages/_A-Propos.scss
@@ -1,3 +1,5 @@
+/*Page A propos*/
+
 .Apropos
 {
     @include body;
@@ -24,6 +26,6 @@
 
 .Body-AP
 {
-    margin: 0px 50px;
-    font-size: 24px;
+    margin: 0px 70px;
+    font-size: 29px;
 }
