--- a/src/sass/pages/_Fiche-logement.scss
+++ b/src/sass/pages/_Fiche-logement.scss
@@ -1,13 +1,54 @@
+/*Page fiche logement*/
+
 .Loge-B
 {
     border-radius: $border-radius1;
     width: 100%;
-    height: 400px;
+    height: 430px;
+    object-fit: cover;
 }
 
 .Loge-box-1
 {
+    margin: 20px 0px;
+    color: $color-1;
+    position: relative;
+}
+
+.Loge-name
+{
+    right: 0px;
     display:flex;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
+
+.Loge-title-1
+{
+    font-size: 36px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.Loge-location
+{
+    font-size: 18px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.Loge-host-1
+{
+    font-size: 18px;
+    margin: 0px;
+    padding: 0px;
+}
+.Loge-host-2
+{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
 }
 
 .Loge-box-2
@@ -23,6 +64,11 @@
 .AP1
 {
     flex: 1;
+}
+
+.FicheLogement
+{
+        @include body;
 }
 
 .AP2
