--- a/src/sass/components/_Collapse.scss
+++ b/src/sass/components/_Collapse.scss
@@ -9,6 +9,12 @@
     padding: 0px;
 }
 
+.div-B
+{
+    margin: 0px;
+    padding: 0px;
+}
+
 .Textbox-title
 {
     background-color: $color-1;
@@ -18,17 +24,27 @@
     padding: 5px 10px;
 }
 
+.Textbox-title-fl
+{
+    background-color: $color-1;
+    color: $color-3;
+    border-radius: $border-radius3;
+    margin: 0px;
+    padding: 10px;
+    font-size: 18px;
+}
+
 .chev
 {
     position: absolute;
     right : 18px;
-    top : 11px;
+    top : 12px;
 }
 
 .Checkbox
 {
     position: absolute;
-    top: 6px;
+    top: 7px;
     right: 20px;
     height: 20px;
     width: 20px;
@@ -42,6 +58,18 @@
     color: $color-1;
     margin: 0px 0px 0px 0px;
     padding: 20px 40px;
+}
+
+.Textbox-text-fld
+{
+    background-color: $color-5;
+    border-radius: 0px 0px 5px 5px;
+    color: $color-1;
+    margin: 0px 0px 0px 0px;
+    margin: 0px;
+    padding: 20px 10px;
+    font-size: 18px;
+    list-style-type:none;
 }
 
 
