--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -40,7 +40,18 @@
 {
     @include btn-1;
     position: absolute;
-    top: 70px;
+    top: 50px;
+    right: 230px;
+}
+
+.Header-2-1-H
+{
+    color:$color-1;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: solid 1px $color-1;
+    position: absolute;
+    top: 50px;
     right: 230px;
 }
 
@@ -48,6 +59,17 @@
 {
     @include btn-1;
     position: absolute;
-    top: 70px;
+    top: 50px;
+    right: 70px;
+}
+
+.Header-2-2-A
+{
+    color:$color-1;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: solid 1px $color-1;
+    position: absolute;
+    top: 50px;
     right: 70px;
 }
