--- a/src/sass/utils/_Variables.scss
+++ b/src/sass/utils/_Variables.scss
@@ -6,7 +6,8 @@ $color-3: #FFFFFF;
 $color-4: #E5E5E5;
 $color-5: #F6F6F6;
 $position1: absolute;
-$border-radius1: 25px;
-$border-radius2: 10px;
-$border-radius3: 5px;
+$border-radius-1: 25px;
+$border-radius-2: 10px;
+$border-radius-3: 5px;
 $police-1: 'Montserrat', sans-serif;
+$margin-1: 0% 4%;
