--- a/src/sass/pages/_404.scss
+++ b/src/sass/pages/_404.scss
@@ -2,7 +2,7 @@
 
 .Erreur
 {
-    @include body;
+    margin: $margin-1;
     display:flex;
     flex-direction: column;
 }
@@ -32,7 +32,6 @@
 
 .Erreur-a
 {
-    @include btn-1;
     color: $color-1;
     font-size: 15px;
     margin-left: 42%;
