--- a/src/sass/pages/_A-Propos.scss
+++ b/src/sass/pages/_A-Propos.scss
@@ -2,7 +2,7 @@
 
 .Apropos
 {
-    @include body;
+    margin: $margin-1;
     text-decoration: none;
 }
 
@@ -12,7 +12,7 @@
     padding: 0px;
     height: 225px;
     background: #000000;
-    border-radius: $border-radius1;
+    border-radius: $border-radius-1;
 }
 
 .Apropos-B
@@ -21,7 +21,7 @@
     width: 91%;
     height: 225px;
     opacity: 0.7;
-    border-radius: $border-radius1;
+    border-radius: $border-radius-1;
 }
 
 .Body-AP
