--- a/src/sass/pages/_Home.scss
+++ b/src/sass/pages/_Home.scss
@@ -2,7 +2,7 @@
 
 .Home
 {
-    @include body;
+    margin:$margin-1;
 }
 
 .Home-1
@@ -11,7 +11,7 @@
     padding: 0px;
     height: 225px;
     background: #000000;
-    border-radius: $border-radius1;
+    border-radius: $border-radius-1;
 }
 
 .Home-B
@@ -20,7 +20,7 @@
     width: 91%;
     height: 225px;
     opacity: 0.7;
-    border-radius: $border-radius1;
+    border-radius: $border-radius-1;
 }
 
 .Home-H
@@ -39,7 +39,7 @@
 {
     margin : 50px 0px;
     background-color: $color-4;
-    border-radius: $border-radius1;
+    border-radius: $border-radius-1;
     display: flex;
     flex-wrap: wrap;
 }
@@ -52,7 +52,7 @@
 
 .CoverH
 {
-    border-radius: $border-radius2;
+    border-radius: $border-radius-2;
     height: 370px; 
     width: 390px;
     object-fit: cover;
