--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -60,7 +60,7 @@
     margin-left: 50px;
 }
 
-@media screen and (max-width: 800px)
+@media screen and (max-width: 770px)
 {
     .Header-1-K
     {
@@ -75,6 +75,11 @@
     }
 
     .Header-2-2
+    {
+        margin-left: 15px;
+    }
+
+    .Header-2-2-A
     {
         margin-left: 15px;
     }
