--- a/src/sass/pages/_A-Propos.scss
+++ b/src/sass/pages/_A-Propos.scss
@@ -3,29 +3,47 @@
 .Apropos
 {
     margin: $margin-1;
-    text-decoration: none;
 }
 
 .banniere-AP
 {
-    margin: 0px 0px 50px 0px;
-    padding: 0px;
-    height: 225px;
-    background: #000000;
+    @include banniere;
     border-radius: $border-radius-1;
+    height: 225px;
+    margin: 40px 0px;
 }
 
 .Apropos-B
 {
-    position: absolute;
-    width: 91%;
-    height: 225px;
-    opacity: 0.7;
+    @include background;
     border-radius: $border-radius-1;
 }
 
 .Body-AP
 {
-    margin: 0px 70px;
-    font-size: 29px;
+    margin: 0px 15% 10px 15%;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 770px)
+{
+    .banniere-AP
+    {
+        border-radius: $border-radius-2;
+        height: 220px;
+        margin: 30px 0px;
+    }
+
+    .Apropos-B
+    {
+        border-radius: $border-radius-2;
+    }
+
+    .Body-AP
+    {
+        margin: 0px 0px 10px 0px;
+        font-weight: 500;
+        font-size: 13px;
+    }
 }
