--- a/src/sass/pages/_Home.scss
+++ b/src/sass/pages/_Home.scss
@@ -7,20 +7,16 @@
 
 .Home-1
 {
-    position: relative;
-    height: 225px;
-    background: #000000;
+    @include banniere;
     border-radius: $border-radius-1;
+    height: 225px;
     display: flex;
     align-items: center;
 }
 
 .Home-B
 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0.7;
+    @include background;
     border-radius: $border-radius-1;
 }
 
