--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -20,3 +20,29 @@
     text-decoration: none;
     padding-bottom: 1px;
 }
+
+@mixin banniere
+{
+    position: relative;
+    background: #000000;
+    width: 100%;
+}
+
+
+@mixin background
+{
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+}
+
+@mixin Textbox-title
+{
+    background-color: $color-1;
+    color: $color-3;
+    border-radius: $border-radius-3;
+    margin: 0px;
+    padding: 5px 10px;
+}
