--- a/src/sass/components/_Collapse.scss
+++ b/src/sass/components/_Collapse.scss
@@ -43,14 +43,55 @@
     padding: 20px 40px;
 }
 
-.Checkbox
+.AP-Checkbox
 {
     position: absolute;
     top: 7px;
     right: 18px;
     height: 20px;
     width: 20px;
-    opacity: 1;
+    opacity: 0;
+}
+
+.FL-Textbox-title
+{
+    background-color: $color-1;
+    color: $color-3;
+    border-radius: $border-radius-3;
+    margin: 0px;
+    padding: 5px 10px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.FL-Textbox-chev
+{
+    position: absolute;
+    height: 15px;
+    width: 25px;
+    top : 8px;
+    right : 15px;
+}
+
+.FL-Textbox-text
+{
+    background-color: $color-5;
+    border-radius: 0px 0px 5px 5px;
+    color: $color-1;
+    margin: 0px;
+    padding: 40px 20px;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.FL-Checkbox
+{
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    height: 20px;
+    width: 20px;
+    opacity: 0;
 }
 
 @media screen and (max-width: 770px)
@@ -70,28 +111,10 @@
         right : 10px;
         top : 5px;
     }
-}
 
-
-
-.Textbox-title-fl
-{
-    background-color: $color-1;
-    color: $color-3;
-    border-radius: $border-radius-3;
-    margin: 0px;
-    padding: 10px;
-    font-size: 18px;
-}
-
-.Textbox-text-fld
-{
-    background-color: $color-5;
-    border-radius: 0px 0px 5px 5px;
-    color: $color-1;
-    margin: 0px 0px 0px 0px;
-    margin: 0px;
-    padding: 20px 10px;
-    font-size: 18px;
-    list-style-type:none;
+    .AP-Checkbox
+    {
+        top: 2px;
+        right: 10px;
+    }
 }
