--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@
 @import "./layout/Header.scss";
 
 /* index et pages */
-@import "./pages/404.scss";
+@import "./pages/Error.scss";
 @import "./pages/A-Propos.scss";
 @import "./pages/Fiche-logement.scss";
 @import "./pages/Home.scss";
