--- a/src/sass/pages/_Fiche-logement.scss
+++ b/src/sass/pages/_Fiche-logement.scss
@@ -68,7 +68,7 @@
     font-weight: 500;
     font-size: 18px;
     color: $color-1;
-    margin: 0px;
+    margin: 0px 0px -40px 0px;
     padding: 0px;
 }
 
@@ -124,13 +124,53 @@
         display:none;
     }
 
+    .Loge-host-1-1
+    {
+        margin: 0px;
+    }
+
+    .Loge-host-1-2
+    {
+        text-align:center;
+    }
+
     .Loge-per2
     {
         display:flex;
+        margin: 10px 0px;
+        justify-content: space-between;
+        align-items: center;
     }
     .Loge-per2-2
     {
         display:flex;
-        justify-content: space-between;
+        align-items: center;
+    }
+    .Loge-location
+    {
+        margin: 0px;
+    }
+    .Loge-name
+    {
+        font-size: 12px;
+        color: $color-1;
+    }
+
+    .Loge-host-2
+    {
+        height: 30px;
+        width: 30px;
+    }
+
+    .Loge-FL
+    {
+        display:flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .FL1
+    {
+        margin-right: 0px;
     }
 }
